option java_package = "com.yim.message.pix.game";   
option java_outer_classname = "MessagePtoto";
//全局错误信息 = 0
message ErrorMessage{
	required string errorReason = 1;
}
//心跳包 =100
message HeartBeatReq{
}
//心跳包 = 101
message HeartBeatRes{
	required int32 time = 1;//服务器当前时间
}
//登陆 = 102
message LoginReq{
	required string name = 1;
	required int32 racist = 2;//种族类型 0 1 2 3
}
//登陆 = 103
message LoginRes{
	required int32 playerId = 1;
	required string name =2;
}

//请求当前阵型 = 104
message FormationReq{
}

//当前阵型 = 105
message FormationRes{
	required int32 position0 = 1;
	required int32 position1 = 2;
	required int32 position2 = 3;
	required int32 position3 = 4;
	required int32 position4 = 5;
	required int32 position5 = 6;
	repeated ArmyMessage armys = 7;
}
//兵种
message ArmyMessage{
	required int32 armyTemplateId = 1;//兵种模板id
	required string name = 2;
	required int32 atk = 3;
	required int32 def = 4;
	required int32 round = 5;
	required int32 level = 6;
	required string describe = 7;
	required string icon = 8;//兵种图标
	
}

//保存阵型请求 = 106
message FormationSaveReq{
	required int32 position0 = 1;
	required int32 position1 = 2;
	required int32 position2 = 3;
	required int32 position3 = 4;
	required int32 position4 = 5;
	required int32 position5 = 6;
}
//保存阵型 = 107
message FormationSaveRes{
	
}

//匹配战斗 = 108
message BattleMatchReq{
	
}
//匹配战斗 = 109
message BattleMatchRes{
}

//同步匹配结果 = 110
message BattleMatchSyn{
	required int32 success = 1;//1匹配成功 2匹配超时
	optional PlayerMessage playerInfo = 2;//玩家信息
}

//玩家信息
message PlayerMessage{
	required int32 playerId = 1;//玩家id
	required string name = 2;//玩家名字
	required int32 racist = 3;//种族
}

//开始战斗 = 111
message StartBattleReq{
}
//开始战斗 = 112
message StartBattleRes{
	required int32 maxHp = 1;//最大血量
	required int32 hp = 2;//当前血量
	required int32 maxMagic = 3;//最大魔力值
	required int32 magic = 4;//魔力值
	required int32 idleArmy = 5;//空闲兵数量
	required int32 maxHp_e = 6;//对手最大血量
	required int32 hp_e = 7;//对手当前血量
	required int32 maxMagic_e = 8;//对手最大魔力值
	required int32 magic_e = 9;//对手魔力值
	required int32 idleArmy_e = 10;//对手空闲兵数量
	repeated BattleArmy battleArmys = 11;//兵种信息
	repeated BattleArmy battleArmys_e = 12;//对手兵种信息
}
message BattleArmy{
	required int32 x = 1;
	required int32 y = 2;
	required int32 instanceId = 3;//兵种实例id
	required int32 armyColor = 4;//兵种颜色id
	required string icon = 5;//兵种图标
}

//请求移动士兵 = 113
message MoveArmyReq{
	required int32 fromx = 1;//移动开始的x坐标
	required int32 tox = 2;//目标x坐标
}
//请求删除士兵 = 114
message RemoveArmyReq{
	required int32 targetx = 1;
	required int32 targety = 2;
}

//释放技能 = 115
message PlayerAtkReq{
}

//战场效果变化 = 120
message BattleChangeSyn{
	repeated BattleStepMessage battleStep = 1;
}

message BattleStepMessage{
	required int32 type = 1;//步骤类型 0单个士兵移动 2形成攻击阵型3个士兵移动 3形成防御城墙 4城墙合成
	optional ArmyMoveMessage armyMove = 2;//单个士兵移动
	optional AtkQueueMessage atkqueue = 3;//攻击阵型
	optional WallQueueMessage wallQueue = 4;//防御城墙
	optional WallMergeMessage wallMerge = 5;//合成城墙
	
}

//单个士兵移动
message ArmyMoveMessage{
	required int32 armyId = 1;//士兵instanceId
	required int32 tox = 2;//目标x坐标
	required int32 toy = 3;//目标y坐标
}

//形成一个攻击阵型
message AtkQueueMessage{
	repeated int32 armyId = 1;
	repeated int32 targetY = 2;
}
//防御城墙
message WallQueueMessage{
	repeated int32 armyId = 1;
	repeated int32 targetX = 2;
	repeated int32 targetY = 3;
}
//城墙合成
message WallMergeMessage{
	repeated int32 fromId = 1;
	repeated int32 toId = 2;
}













